@@ -1,0 +1,2 @@
+foobardir = $(includedir)/libportage
+foobar_HEADERS = liblpatom.h liblpcommon.h liblputil.h liblpxpak.h
