@@ -12,7 +12,10 @@
 	added tests for autoconf Defines.
 	* lib/liblpxpak.c: added (BEGIN|END)_C_DECLS macros.
 	added tests for autoconf Defines.
-	* lib: renamed to src.
+	* lib/: renamed to src/.
+ 	* COPYING: added.
+	* Makefile.am: added.
+	* 
 
 2009-02-05  Lars Hartmann  <lars (at) chaotika (dot) org>
 
